      equivalent (i.e. give the same values).

Breaking Changes:

    - Oculus PC SDK version 23.0 is needed to build this release of PsychXR.
      Compilation will likely fail if any older version of the SDK is specified.
    - Branch `master` has been renamed to `main`. Update your local git branches
      accordingly.

Known Issues:

    - OpenHMD support is incomplete, available only for preview and not
      recommended for general use yet.

Version 0.2.3 - 2019/12/10
--------------------------

Overview:

    This release has some minor fixes and features such as improved memory use
    and performance.

New Features:

    - Added function `checkSessionStarted` to determine if there is an active VR
      session. This is helpful to determine if a session is active from another
      module or file within the same interpreter thread.
    - Added `normalMatrix` and `getNormalMatrix` which retrieves a normal matrix
      for a mesh at a given pose. This matrix is commonly used by fragment
      shaders, and would usually need to be computed separately with the model
      matrix. That's no longer the case, you can now get a normal matrix along
      with your model matrix from a `LibOVRPose` instance.
    - `LibOVRPose` matrices are now cached to improve performance and memory
      access. Returned `ndarray` matrices now reference data directly instead of
      being copied over to new arrays every time. Matrices are computed only
      after `pos` and `ori` are accessed/changed. Furthermore, they are computed
      only when any attribute or method of `LibOVRPose` which returns a matrix
      is invoked. If there are no changes to `pos` and `ori` between successive
      matrix related attribute or method calls, cached data will be returned
      immediately without additional computation. One caveat about this approach
      is that matrices are always recomputed when accessing values, even if