@@ -6,7 +6,20 @@ import sys
 import ctypes
 import OpenGL.GL as GL
 import glfw
+import atexit
 from psychxr.drivers.libovr import *
+
+atexit.register(glfw.terminate)
+
+
+def _logCallback(level, msg):
+    """Callback function for log messages generated by LibOVR."""
+    if level == LOG_LEVEL_INFO:
+        print(msg)
+    elif level == LOG_LEVEL_DEBUG:
+        print(msg)
+    elif level == LOG_LEVEL_ERROR:
+        print(msg)
 
 
 def main():
@@ -193,11 +206,8 @@ def main():
 
     destroyMirrorTexture()
     destroyTextureSwapChain(TEXTURE_SWAP_CHAIN0)
-
-    glfw.terminate()
-
     destroy()
-    shutdown()
+    # shutdown()  causes access violation on exit
 
     return 0
 
